[tool.poetry]
name = "pyecf"
version = "0.1.0"
description = "Elliptic Curve Factorization"
authors = ["Nikita Yurasov <n.yurasov@yahoo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gmpy2 = "^2.1"
matplotlib = "^3.8"
numpy = "^1.26"
sympy = "^1.12"
tqdm = "^4.66"
typer = "^0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.3"
isort = "^5.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
line_length = 120
profile = "black"

